--- a/src/main/webapp/resources/css/soohyung.css
+++ b/src/main/webapp/resources/css/soohyung.css
@@ -25,4 +25,8 @@ padding-right: 9px;border-top-width: 10px;text-decoration: underline;font-size: 
     padding: 0px;
     border-bottom: 2px solid #898987;
     padding-top: 50px;
+    
 }
+
+#phone22{background: white;background: url()}
+#phone33{background: white;background: url()}
